# Fill-the-Frames

./: .gitattributes  Dockerfile  main.py  pyproject.toml
backend/: openapi_local.json  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: animation.py  export.py  health.py  interpolation.py  metadata.py  metrics.py  upload.py  validation.py  visualization.py
backend/app/core/: config.py  exceptions.py
backend/app/schemas/: animation.py  common.py  export.py  interpolation.py  metadata.py  metrics.py  upload.py  validation.py  visualization.py
backend/app/services/: upload_service.py
backend/app/services/inference/: interpolation_service.py  model_loader.py  rife.py
backend/app/services/scheduler/: __init__.py  mosdac_service.py  scheduler.py  state_manager.py
backend/app/services/scientific/: base_parser.py  hdf_parser.py  metadata_service.py  metrics.py  netcdf_parser.py  validation_service.py  visualization_service.py
backend/models/: registry.json
backend/storage/uploads/: 3230db5e-6598-43ea-aa9f-11190c4f4476_OR_ABI-L1b-RadF-M6C13_G19_s20260010340226_e20260010349546_c20260010349596.nc  33e87934-463f-4182-b380-6b1a3186e264.nc
backend/tests/: test_metadata.py  test_visualization.py
frontend/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
satellite-interpolation-app/: README.md  package.json
src/: utils.py
src/config/: config.yaml  settings.py
tests/: test_config.py  test_data_manager.py  test_dataset.py  test_fetchers.py  test_model.py  test_pipeline.py  test_s3_manager.py  test_standardizer.py  test_trainer.py
(+223 files in other folders)
