[project]
name = "satellite-video-feed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.31",
    "netcdf4>=1.7.4",
    "numpy>=2.4.6",
    "pytest>=9.1.0",
    "pyyaml>=6.0.3",
    "satpy>=0.60.0",
    "tensorboard>=2.20.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "xarray>=2026.4.0",
]

[tool.uv.workspace]
members = [
    "backend",
]
