[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "fsspec>=2026.6.0",
    "h5netcdf>=1.8.1",
    "h5py>=3.16.0",
    "huggingface-hub[hf-transfer]>=1.20.1",
    "loguru>=0.7.3",
    "matplotlib>=3.11.0",
    "netcdf4>=1.7.4",
    "onnxruntime>=1.27.0",
    "python-multipart>=0.0.32",
    "satpy>=0.60.0",
    "uvicorn>=0.49.0",
    "scikit-image"
]
[tool.pyright]
venvPath = "~/Projects/satellite_video_feed/"
venv = ".venv"

[tool.setuptools]
packages = ["app"]
